# bubz2

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
slicepat/: Cargo.toml
slicepat/src/: lib.rs  pattern.rs  u8_buf.rs
src/: main.rs  state.rs
