[package]
name = "bubz2"
version = "0.1.0"
edition = "2021"
authors = ["[aka]bomb"]
description = "Prepare files for FastDL"

[dependencies]
bzip2 = { version = "0.4.4", features = ["tokio"] }
pico-args = "0.5.0"
rustc-hash = "2.0.0"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread"] }
