[package]
name = "bubz2"
version = "0.3.0"
edition = "2021"
authors = ["[aka]bomb"]
description = "Prepare files for FastDL"

[workspace]
members = [
	"slicepat",
]

[dependencies]
bzip2 = "0.5.0"
pico-args = "0.5.0"
rustc-hash = "2.0.0"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread"] }
slicepat = { path = "./slicepat" }
